added validation of entered values and work with DOM

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="info__block">
       <div class="info__block-subtitle">Timezone</div>
-      <div class="info__block-title">UTC<span id="tinezone"></span></div>
+      <div class="info__block-title">UTC<span id="timezone"></span></div>
     </div>
     <div class="info__block">
       <div class="info__block-subtitle">ISP</div>
