--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
   </div>
   </div>
 
+  <div class="map"></div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
   <script src="./src/index.js"></script>
 </body>
 </html>
